--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -5,5 +5,13 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    
+    <item
+        android:id="@+id/action_search"
+        android:title="@string/draweraction_search"
+        android:orderInCategory="100"
+        android:icon="@drawable/ic_draweraction_search"
+        android:showAsAction="collapseActionView|ifRoom"
+        android:actionViewClass="android.widget.SearchView" />
 
 </menu>
