--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
@@ -9,7 +10,6 @@
     <item
         android:id="@+id/action_search"
         android:title="@string/draweraction_search"
-        android:orderInCategory="100"
         android:icon="@drawable/ic_draweraction_search"
         android:showAsAction="collapseActionView|ifRoom"
         android:actionViewClass="android.widget.SearchView" />
