--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -2,15 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/menu_action_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
     
     <item
         android:id="@+id/action_search"
-        android:title="@string/draweraction_search"
-        android:icon="@drawable/ic_draweraction_search"
+        android:title="@string/menu_action_search"
+        android:icon="@drawable/ic_search"
         android:showAsAction="collapseActionView|ifRoom"
         android:actionViewClass="android.widget.SearchView" />
 
