--- a/res/layout/profile_tab_itins.xml
+++ b/res/layout/profile_tab_itins.xml
@@ -1,14 +1,16 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    tools:context=".NearMeFragment" >
 
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
-        android:id="@+id/news_feed_text"
+        android:id="@+id/profile_tab_itins_text"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="match_parent" 
         android:gravity="center"/>
 
 </FrameLayout>
