--- a/res/layout/profile_tab_itins.xml
+++ b/res/layout/profile_tab_itins.xml
@@ -3,14 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NearMeFragment" >
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
-    <!-- TODO: Update blank fragment layout -->
-
-    <TextView
-        android:id="@+id/profile_tab_itins_text"
+    <ListView
+        android:id="@+id/profile_itins_itinList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" 
-        android:gravity="center"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="top" >
+    </ListView>
 
 </FrameLayout>
