--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -4,9 +4,27 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
- 
 	<dimen name="profile_picture_vertical_margin">40dp</dimen>
 	<dimen name="profile_picture_horizontal_margin">60dp</dimen>
 	<dimen name="profile_name_indent">40dp</dimen>
 	<dimen name="profile_name_font_size">30sp</dimen>
+	
+	<dimen name="itinlist_allpadtop">20dp</dimen>
+	<dimen name="itinlist_allpadbottom">20dp</dimen>
+    <dimen name="itinlist_totalheight">200dp</dimen>
+   
+	<dimen name="itinlist_imageheight">160dp</dimen>
+	<dimen name="itinlist_imagewidth">210dp</dimen>
+	<dimen name="itinlist_imagepadleft">10dp</dimen>
+	<dimen name="itinlist_imagepadright">40dp</dimen>
+	
+	<dimen name="itinlist_textheight">160dp</dimen>
+	<dimen name="itinlist_textwidth">370dp</dimen>
+	<dimen name="itinlist_textpadleft">20dp</dimen>
+	
+	<dimen name="itinlist_name_size">30sp</dimen>
+	
+	<dimen name="itinlist_date_size">20sp</dimen>
+	
+	<dimen name="itinlist_comment_size">20sp</dimen>
 </resources>
