drag N sort working

--- a/res/layout/activity_itinerary.xml
+++ b/res/layout/activity_itinerary.xml
@@ -29,12 +29,11 @@
         
     </RelativeLayout>
     
-    <ListView
+    <FrameLayout
         android:id="@+id/itinerary_expList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="top" >
-    </ListView>
+        android:layout_gravity="top" />
 
 
 
