--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -2,4 +2,6 @@
 <resources>
     <item type="id" name="drag_handle" />
     <item type="id" name="click_remove" />
+    <item type="id" name="searchresultlist_plusbtn_nametag" />
+    <item type="id" name="searchresultlist_plusbtn_eidtag" />
 </resources>
