Functionality for saved static map?

--- a/res/layout/activity_itin_map_fragment.xml
+++ b/res/layout/activity_itin_map_fragment.xml
@@ -5,6 +5,13 @@
     android:background="#0099cc"
     tools:context="com.swat.onthespot.ItinMapFragment" >
 
+    <ImageView 
+        android:id="@+id/staticMap"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+    
+    
     <!--
          The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
@@ -18,6 +25,8 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       />
+
+"
 
     <!--
          This FrameLayout insets its children based on system windows using
