--- a/res/layout/drawer_profile.xml
+++ b/res/layout/drawer_profile.xml
@@ -9,7 +9,7 @@
         android:layout_height="0dp"
         android:layout_weight="2" 
         android:orientation="horizontal"
-        android:background="#dddddd">
+        android:background="@drawable/profile_background">
 
         <ImageView
             android:id="@+id/profile_account_picture"
@@ -19,7 +19,7 @@
             android:paddingBottom="@dimen/profile_picture_vertical_margin"
             android:paddingLeft="@dimen/profile_picture_horizontal_margin"
             android:paddingRight="@dimen/profile_picture_horizontal_margin"
-            android:src="@drawable/default_user"
+            android:src="@drawable/face_patrick"
             android:adjustViewBounds="true" />
         
         <TextView
@@ -29,7 +29,8 @@
             android:text="@string/user_full_name"
             android:gravity="center_vertical"
             android:paddingLeft="@dimen/profile_name_indent"
-            android:textSize="@dimen/profile_name_font_size" />
+            android:textSize="@dimen/profile_name_font_size"
+            android:textColor="#ff000000" />
         
     </LinearLayout>
      
