--- a/res/layout/list_item_exps.xml
+++ b/res/layout/list_item_exps.xml
@@ -5,11 +5,22 @@
     android:paddingBottom="@dimen/explist_allpadbottom"
     android:paddingTop="@dimen/explist_allpadtop">
 
+    <ImageView
+        android:id="@+id/explist_item_image"
+        android:layout_width="@dimen/explist_imagewidth"
+        android:layout_height="@dimen/explist_imageheight"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:adjustViewBounds="true"
+        android:paddingLeft="@dimen/explist_imagepadleft"
+        android:paddingRight="@dimen/explist_imagepadright"
+        android:src="@drawable/one_liberty_place" />
+        
     <LinearLayout
         android:layout_width="@dimen/explist_textwidth"
         android:layout_height="@dimen/explist_textheight"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/explist_item_image"
         android:paddingLeft="@dimen/explist_textpadleft"
         android:orientation="vertical" >
 
@@ -19,6 +30,7 @@
             android:layout_height="wrap_content"
             android:gravity="left|center_vertical"
             android:layout_weight="1"
+            android:text="Watching the sunset at"
             android:textSize="@dimen/explist_action_size" />
            
         <TextView android:id="@+id/explist_item_name"
@@ -26,6 +38,7 @@
             android:layout_height="wrap_content"
             android:gravity="left|center_vertical"
             android:layout_weight="2"
+            android:text="One Liberty Place"
             android:textSize="@dimen/explist_name_size" />
         
         <TextView
@@ -34,19 +47,23 @@
             android:layout_height="wrap_content"
             android:gravity="left|center_vertical"
             android:layout_weight="1"
+            android:text="This is absolutely stunning!"
             android:textSize="@dimen/explist_comment_size" />
 
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/explist_item_image"
-        android:layout_width="@dimen/explist_imagewidth"
-        android:layout_height="@dimen/explist_imageheight"
+        android:id="@+id/explist_item_dragimage"
+        android:src="@drawable/ic_dragsort"
+        android:layout_width="@dimen/explist_dragimagewidth"
+        android:layout_height="@dimen/explist_dragimageheight"
+        android:layout_marginLeft="@dimen/explist_dragimagepad"
+        android:layout_marginRight="@dimen/explist_dragimagepad"
+        android:layout_marginTop="@dimen/explist_dragimagepad"
+        android:layout_marginBottom="@dimen/explist_dragimagepad"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:adjustViewBounds="true"
-        android:paddingLeft="@dimen/explist_imagepadleft"
-        android:paddingRight="@dimen/explist_imagepadright" />
+        android:layout_centerVertical="true" />
+
 
 </RelativeLayout>
 
