--- a/res/menu/itinerary.xml
+++ b/res/menu/itinerary.xml
@@ -6,4 +6,11 @@
         android:showAsAction="never"
         android:title="@string/action_settings"/>
 
+    <item
+        android:id="@+id/menu_action_search"
+        android:title="@string/menu_action_search"
+        android:icon="@drawable/ic_search"
+        android:showAsAction="collapseActionView|ifRoom"
+        android:actionViewClass="android.widget.SearchView" />
+    
 </menu>
