--- a/res/layout/drawer_news_feed.xml
+++ b/res/layout/drawer_news_feed.xml
@@ -12,3 +12,17 @@
         android:gravity="center"/>
 
 </FrameLayout>
+<!--  
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+	android:layout_height="wrap_content" >
+
+    <RelativeLayout 
+	    android:layout_height="@dimen/newsfeedlist_item_totalheight"
+	    android:paddingTop="@dimen/newsfeedlist_item_allpadtop"
+	    android:paddingBottom="@dimen/newsfeedlist_item_allpadbottom" >
+        
+    </RelativeLayout>
+    
+</FrameLayout>
+-->
