--- a/res/layout/drawer_news_feed.xml
+++ b/res/layout/drawer_news_feed.xml
@@ -32,12 +32,19 @@
 	        android:textSize="@dimen/newsfeedlist_item_timeagosize" />
 
 	</RelativeLayout>
-	 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="@dimen/newsfeedlist_item_imagesize"
-        android:layout_height="@dimen/newsfeedlist_item_imagesize"
-        android:layout_alignParentLeft="true"
-        android:src="@drawable/face_dakota" />
+	
+    <LinearLayout 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+	    
+	    <ImageView
+	        android:id="@+id/imageView1"
+	        android:layout_width="@dimen/newsfeedlist_item_imagesize"
+	        android:layout_height="@dimen/newsfeedlist_item_imagesize"
+	        android:layout_alignParentLeft="true"
+	        android:src="@drawable/face_dakota" />
+	    
+	</LinearLayout>
 
 </LinearLayout>
