--- a/res/layout/drawer_news_feed.xml
+++ b/res/layout/drawer_news_feed.xml
@@ -1,66 +1,73 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/newsfeedlist_item_allpadbottom"
-    android:paddingLeft="@dimen/newsfeedlist_item_allpadleft"
-    android:paddingRight="@dimen/newsfeedlist_item_allpadright"
-    android:paddingTop="@dimen/newsfeedlist_item_allpadtop" >
-
-    <RelativeLayout 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-        
-	    <TextView
-	        android:id="@+id/newsfeedlist_personname"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignParentLeft="true"
-	        android:layout_alignParentTop="true"
-	        android:text="Dakota Pekerti added"
-	        android:textColor="#ff666666"
-	        android:textSize="@dimen/newsfeedlist_item_personnamesize" />
+    android:background="#66666666">
 	
-	    <TextView
-	        android:id="@+id/newsfeedlist_timeago"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignParentRight="true"
-	        android:layout_alignParentTop="true"
-	        android:text="2 hours ago"
-	        android:textColor="#ff666666"
-	        android:textSize="@dimen/newsfeedlist_item_timeagosize" />
-
-	</RelativeLayout>
+	<LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="vertical"
+	    android:paddingBottom="@dimen/newsfeedlist_item_allpadbottom"
+	    android:paddingLeft="@dimen/newsfeedlist_item_allpadleft"
+	    android:paddingRight="@dimen/newsfeedlist_item_allpadright"
+	    android:paddingTop="@dimen/newsfeedlist_item_allpadtop" >
 	
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-	    
-	    <ImageView
-	        android:id="@+id/newsfeedlist_userimage"
-	        android:layout_width="@dimen/newsfeedlist_item_imagesize"
-	        android:layout_height="@dimen/newsfeedlist_item_imagesize"
-	        android:src="@drawable/face_dakota" />
-	    
-	    <LinearLayout 
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:orientation="horizontal"
-	        android:layout_marginLeft="130dp" >
+	    <RelativeLayout 
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content" >
 	        
-	        	
 		    <TextView
-		        android:id="@+id/newsfeedlist_itinname"
+		        android:id="@+id/newsfeedlist_personname"
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
-		        android:text="Exploring Philly 8th St"
-		        android:textColor="#ff000000"
-		        android:textSize="@dimen/newsfeedlist_item_itinnamesize" />
-	    
+		        android:layout_alignParentLeft="true"
+		        android:layout_alignParentTop="true"
+		        android:text="Dakota Pekerti added"
+		        android:textColor="#ff666666"
+		        android:textSize="@dimen/newsfeedlist_item_personnamesize" />
+		
+		    <TextView
+		        android:id="@+id/newsfeedlist_timeago"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_alignParentRight="true"
+		        android:layout_alignParentTop="true"
+		        android:text="2 hours ago"
+		        android:textColor="#ff666666"
+		        android:textSize="@dimen/newsfeedlist_item_timeagosize" />
+	
+		</RelativeLayout>
+		
+	    <RelativeLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content" >
+		    
+		    <ImageView
+		        android:id="@+id/newsfeedlist_userimage"
+		        android:layout_width="@dimen/newsfeedlist_item_imagesize"
+		        android:layout_height="@dimen/newsfeedlist_item_imagesize"
+		        android:src="@drawable/face_dakota" />
+		    
+		    <LinearLayout 
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:orientation="horizontal"
+		        android:layout_marginLeft="130dp" >
+		        
+		        	
+			    <TextView
+			        android:id="@+id/newsfeedlist_itinname"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:text="Exploring Philly 8th St"
+			        android:textColor="#ff000000"
+			        android:textSize="@dimen/newsfeedlist_item_itinnamesize" />
+		    
+		        
+		    </LinearLayout>
 	        
-	    </LinearLayout>
-        
-	</RelativeLayout>
-
-</LinearLayout>
+		</RelativeLayout>
+	
+	</LinearLayout>
+	
+</FrameLayout>
