--- a/res/layout/drawer_profile.xml
+++ b/res/layout/drawer_profile.xml
@@ -7,45 +7,48 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2" 
-        android:orientation="horizontal"
-        android:background="@drawable/profile_background">
+        android:layout_weight="2"
+        android:background="@drawable/profile_background"
+        android:orientation="horizontal" >
 
         <ImageView
             android:id="@+id/profile_account_picture"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:paddingTop="@dimen/profile_picture_vertical_margin"
+            android:adjustViewBounds="true"
             android:paddingBottom="@dimen/profile_picture_vertical_margin"
             android:paddingLeft="@dimen/profile_picture_horizontal_margin"
             android:paddingRight="@dimen/profile_picture_horizontal_margin"
-            android:src="@drawable/face_patrick"
-            android:adjustViewBounds="true" />
-        
+            android:paddingTop="@dimen/profile_picture_vertical_margin"
+            android:src="@drawable/face_patrick" />
+
         <TextView
             android:id="@+id/profile_user_fullname"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/user_full_name"
             android:gravity="center_vertical"
             android:paddingLeft="@dimen/profile_name_indent"
-            android:textSize="@dimen/profile_name_font_size"
-            android:textColor="#ffffffff" />
-        
+            android:text="@string/user_full_name"
+            android:textColor="#ffffffff"
+            android:textSize="@dimen/profile_name_font_size" />
     </LinearLayout>
-     
+
     <com.viewpagerindicator.TabPageIndicator
         android:id="@+id/indicator"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-    />
-    
-            
-    <android.support.v4.view.ViewPager
-	    android:id="@+id/profile_pager"
-	    android:layout_width="match_parent"
-	    android:layout_height="0dp"
-	    android:layout_weight="8" />
+        android:layout_weight="1" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="8"
+        android:background="@color/activity_background_grey" >
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/profile_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </RelativeLayout>
 
 </LinearLayout>
