--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -6,20 +6,19 @@
 
 	<dimen name="profile_picture_vertical_margin">20dp</dimen>
 	<dimen name="profile_picture_horizontal_margin">40dp</dimen>
-	<dimen name="profile_name_indent">40dp</dimen>
-	<dimen name="profile_name_font_size">30sp</dimen>
+	<dimen name="profile_name_indent">60dp</dimen>
+	<dimen name="profile_name_font_size">35sp</dimen>
 	
-	<dimen name="itinlist_allpadtop">20dp</dimen>
-	<dimen name="itinlist_allpadbottom">20dp</dimen>
-    <dimen name="itinlist_totalheight">200dp</dimen>
-	<dimen name="itinlist_imageheight">160dp</dimen>
-	<dimen name="itinlist_imagewidth">210dp</dimen>
-	<dimen name="itinlist_imagepadleft">10dp</dimen>
-	<dimen name="itinlist_imagepadright">40dp</dimen>
-	<dimen name="itinlist_textheight">160dp</dimen>
+	<dimen name="itinlist_allpadtop">10dp</dimen>
+	<dimen name="itinlist_allpadbottom">10dp</dimen>
+    <dimen name="itinlist_totalheight">150dp</dimen>
+	<dimen name="itinlist_imageheight">130dp</dimen>
+	<dimen name="itinlist_imagewidth">130dp</dimen>
+	<dimen name="itinlist_imagemarginright">10dp</dimen>
+	<dimen name="itinlist_textheight">120dp</dimen>
 	<dimen name="itinlist_textwidth">370dp</dimen>
-	<dimen name="itinlist_textpadleft">20dp</dimen>
-	<dimen name="itinlist_name_size">30sp</dimen>
+	<dimen name="itinlist_textmarginleft">20dp</dimen>
+	<dimen name="itinlist_name_size">25sp</dimen>
 	<dimen name="itinlist_date_size">20sp</dimen>
 	<dimen name="itinlist_comment_size">20sp</dimen>
 	
@@ -57,13 +56,19 @@
 	<dimen name="searchresultlist_plusbtnsize">60dp</dimen>
 	<dimen name="searchresultlist_plusbtnpad">20dp</dimen>
 	
-	<dimen name="newsfeedlist_item_totalheight">170dp</dimen>
-	<dimen name="newsfeedlist_item_allpadtop">15dp</dimen>
-	<dimen name="newsfeedlist_item_allpadbottom">15dp</dimen>
-	<dimen name="newsfeedlist_item_allpadleft">20dp</dimen>
-	<dimen name="newsfeedlist_item_allpadright">20dp</dimen>
+	<dimen name="newsfeedlist_item_totalheight">140dp</dimen>
+	<dimen name="newsfeedlist_item_allpadtop">10dp</dimen>
+	<dimen name="newsfeedlist_item_allpadbottom">10dp</dimen>
+	<dimen name="newsfeedlist_item_allpadleft">10dp</dimen>
+	<dimen name="newsfeedlist_item_allpadright">10dp</dimen>
+	<dimen name="newsfeedlist_item_allmarginleft">10dp</dimen>
+	<dimen name="newsfeedlist_item_allmarginright">10dp</dimen>
+	<dimen name="newsfeedlist_item_allmargintop">10dp</dimen>
 	<dimen name="newsfeedlist_item_personnamesize">15sp</dimen>
 	<dimen name="newsfeedlist_item_timeagosize">15sp</dimen>
+	<dimen name="newsfeedlist_item_toplinepadbottom">5dp</dimen>
 	<dimen name="newsfeedlist_item_imagesize">100dp</dimen>
-		<dimen name="newsfeedlist_item_itinnamesize">25sp</dimen>
+	<dimen name="newsfeedlist_item_itinnamesize">25sp</dimen>
+	<dimen name="newsfeedlist_item_itindatesize">18sp</dimen>
+	<dimen name="newsfeedlist_item_itincommentsize">15sp</dimen>
 </resources>
